# Gtm_System_Outbound

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_OUTCOME.md  Dockerfile  GTM_OS_CLAUDE_CODE_PLAN.md  HARDENING_OUTCOME.md  ICP_INTELLIGENCE_OUTCOME.md  Makefile  README.md  alembic.ini  demo.py  docker-compose.scheduled.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  full_pipeline.yml  pipeline.yml  stage1_prospecting.yml  stage2_contacts.yml  (+2 more)
config/: apollo_query_config.json  icp_rules.example.json  icp_rules.json  icp_rules_recommended.json  lifecycle_mapping.json  outreach_templates.json  persona_map.json  scheduler.json  vendor_pricing.yaml
dashboard/: index.html
data/: fake_campaign_metrics.json  fake_companies.json  fake_contacts.json
docs/: DATA_FORMAT_REFERENCE.md  ICP_INTELLIGENCE_GUIDE.md
scripts/: dashboard_api.py  generate_crm_setup.py  sync_to_hubspot.py  validate_crm_setup.py  weekly_report.py
src/: errors.py  icp_intelligence_runner.py  logging.py  main.py  runner.py
tests/: conftest.py  test_api_clients.py  test_campaign_health.py  test_circuit_breakers.py  test_deduplication.py  test_email_validation.py  test_enrichment.py  test_epic4.py  test_hubspot_mapping.py  test_hubspot_upsert.py  test_icp_integration.py  test_icp_scoring.py  test_ingestion.py  test_interface_contracts.py  test_lifecycle_config.py  test_logging.py  test_mock_data_edge_cases.py  test_no_deprecated_utcnow.py  test_partial_failure.py  test_pipeline_smoke.py  test_retry.py  test_run_manifest.py  test_scheduler.py  test_schema_validation.py  test_sequence_export.py  test_settings_validation.py  test_storage_and_dedup.py
(+158 files in other folders)
